k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-demo-svc
spec:
  type: ClusterIP
  selector:
    app: backend-demo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
