k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo-svc
spec:
  type: NodePort
  selector:
    app: web-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
