k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: web-demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-demo-svc
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-demo-svc
                port:
                  number: 80
